# zetachain_superteam

./: Anchor.toml  Cargo.toml  DEVNET_DEPLOYMENT.md  PROJECT_SUMMARY.md  README.md  localnet.sh  package.json
scripts/: deploy.sh
src/: constants.rs  errors.rs  lib.rs  state.rs
src/instructions/: burn_nft.rs  cross_chain_transfer.rs  initialize.rs  mint_nft.rs  mod.rs  process_incoming_nft.rs  setup_gateway.rs  transfer_nft.rs  update_metadata.rs  verify_cross_chain_ownership.rs
tests/: universal-nft.ts
